test/visibility/import/edgeCases/multipleDef3.good
multipleDef3.chpl:2: error: symbol x is multiply defined
multipleDef3.chpl:5: note: also defined here
